--- a/grunt-app/app/styles/css/main.css
+++ b/grunt-app/app/styles/css/main.css
@@ -1,26 +1,39 @@
-.pane {
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-position: center top;
-  background-size: 640px 1050px;
-  background-image: url("../../images/background.png"); }
+.container {
+  height: 88%; }
 
-#small-space {
-  line-height: 5px; }
-
-IMG.centered {
-  display: block;
-  padding-top: 250px;
-  margin-left: -33px; }
-
-#map {
-  width: 80%;
-  height: 400px;
-  margin: 10px auto;
-  box-shadow: 0 3px 25px black; }
-
-.img-center {
+.hoot {
+  background: linear-gradient(to right, #69ffa5 0%, #9dffc4 50%, #6fb692 50%, #9dffc4 100%);
+  height: 100%;
   width: 100%;
-  margin-top: 60%; }
+  display: flex; }
+
+.right {
+  width: 50%;
+  height: 100%; }
+
+.left {
+  width: 50%;
+  height: 100%; }
+
+.recorder {
+  text-align: center;
+  margin-top: 5%; }
+
+.owl-open {
+  width: 60%;
+  height: 40%; }
+
+.icon {
+  font-size: 34px; }
+
+p {
+  text-align: center;
+  margin-bottom: 10px !important; }
+
+.spinner svg {
+  width: 60% !important;
+  height: 70% !important;
+  margin-top: 30%;
+  margin-left: 30%; }
 
 /*# sourceMappingURL=main.css.map */
