--- a/grunt-app/app/styles/partials/skin.scss
+++ b/grunt-app/app/styles/partials/skin.scss
@@ -4,14 +4,14 @@
 }
 
 .hoot {
-  background: linear-gradient(
-                  to right,
-                  #69ffa5 0%,
-                  #9dffc4 50%,
-                  #6fb692 50%,
-                  #9dffc4 100%
-  );
-
+  //background: linear-gradient(
+  //                to right,
+  //                #69ffa5 0%,
+  //                #9dffc4 50%,
+  //                #6fb692 50%,
+  //                #9dffc4 100%
+  //);
+background-color: whitesmoke;
   height: 85vh;
   width: 100%;
   display: flex;
@@ -25,6 +25,12 @@
 .left {
   width: 50%;
   height: 100%;
+}
+
+.left.activated
+{
+  background: linear-gradient(to right, rgba(204, 204, 204,0.2), rgba(153,153,153,0));
+
 }
 
 .recorder {
@@ -62,7 +68,6 @@ p {
   height: 85vh;
   width: 100%;
   display: flex;
-
 }
 
 .player{
