--- a/grunt-app/app/styles/partials/login.scss
+++ b/grunt-app/app/styles/partials/login.scss
@@ -1,4 +1,11 @@
-//.img-center{
-//  width: 100%;
-//  margin-top: 60%;
-//}
+.img-center{
+  width: 100%;
+  height: 100%;
+}
+
+.img-owl{
+  width: 100%;
+  height: 50%;
+  position: absolute;
+  top: 25%;
+}
