--- a/grunt-app/app/styles/css/main.css
+++ b/grunt-app/app/styles/css/main.css
@@ -11,6 +11,9 @@
   width: 50%;
   height: 100%; }
 
+.right.activated {
+  background: linear-gradient(to left, rgba(204, 204, 204, 0.2), rgba(153, 153, 153, 0)); }
+
 .left {
   width: 50%;
   height: 100%; }
@@ -56,5 +59,77 @@ p {
   height: 50%;
   position: absolute;
   top: 25%; }
+
+#homepage body {
+  padding: 5em;
+  text-align: center; }
+#homepage h1 {
+  margin-bottom: 1em; }
+#homepage .circle-loader {
+  margin: 0 0 30px 10px;
+  border: 2px solid rgba(0, 0, 0, 0.2);
+  border-color: #5cb85c;
+  animation-name: none;
+  animation-duration: 4s;
+  animation-timing-function: linear;
+  position: relative;
+  display: inline-block;
+  vertical-align: top; }
+#homepage .circle-loader,
+#homepage .circle-loader:after {
+  border-radius: 50%;
+  width: 8em;
+  height: 8em;
+  margin: auto;
+  -webkit-animation: fadeinout 6s linear forwards;
+  animation: fadeinout 6s linear forwards; }
+#homepage .load-complete {
+  -webkit-animation: none;
+  animation: none;
+  border-color: #5cb85c;
+  transition: border 500ms ease-out; }
+#homepage .checkmark.draw:after {
+  animation-duration: 3.2s;
+  animation-timing-function: ease;
+  animation-name: checkmark;
+  transform: scaleX(-1) rotate(135deg); }
+#homepage .checkmark:after {
+  opacity: 1;
+  height: 4em;
+  width: 2em;
+  transform-origin: left top;
+  border-right: 2px solid #5cb85c;
+  border-top: 2px solid #5cb85c;
+  content: '';
+  left: 2em;
+  top: 4em;
+  position: absolute; }
+@keyframes checkmark {
+  0% {
+    height: 0;
+    width: 0;
+    opacity: 1; }
+  20% {
+    height: 0;
+    width: 2em;
+    opacity: 1; }
+  40% {
+    height: 4em;
+    width: 2em;
+    opacity: 1; }
+  100% {
+    height: 4em;
+    width: 2em;
+    opacity: 1; } }
+@-webkit-keyframes fadeinout {
+  0%,100% {
+    opacity: 0; }
+  50% {
+    opacity: 1; } }
+@keyframes fadeinout {
+  0%,100% {
+    opacity: 0; }
+  50% {
+    opacity: 1; } }
 
 /*# sourceMappingURL=main.css.map */
