--- a/grunt-app/app/styles/css/main.css
+++ b/grunt-app/app/styles/css/main.css
@@ -1,3 +1,6 @@
+@font-face {
+  font-family: des_passion;
+  src: url(../../fonts/PassionTea.ttf); }
 .container {
   height: 100%; }
 
@@ -49,6 +52,19 @@ p {
 .player {
   display: none; }
 
+.main-text {
+  width: 100%;
+  top: 4em;
+  position: absolute;
+  z-index: 9999;
+  font-family: des_passion; }
+
+.text-hoot {
+  font-size: 30px;
+  color: white;
+  letter-spacing: 1px;
+  opacity: 0.9; }
+
 .img-center {
   width: 100%;
   height: 100%;
@@ -77,23 +93,42 @@ p {
   left: -4px;
   position: absolute; }
 
+.img-recorded {
+  width: 100%;
+  height: 99%;
+  z-index: 1000;
+  left: -4px;
+  opacity: 0.1 !important;
+  position: absolute; }
+
 .tap-text {
   text-align: center;
   margin-bottom: 10px !important;
   z-index: 111111;
-  display: block;
+  display: inline-block;
+  padding-top: 12px;
   position: absolute;
   bottom: 10%;
+  font-size: 25px;
+  letter-spacing: 1px;
+  height: 7%;
   width: 100%;
-  font-size: 16px;
   color: white;
   opacity: 1;
   text-transform: capitalize;
-  font-family: "Comic Sans MS"; }
+  font-family: des_passion;
+  box-shadow: 0px 1px 13px -1px #3a3a3a;
+  background: rgba(0, 0, 0, 0.4); }
 
 .parallax-animated {
   -webkit-animation-duration: 800ms;
   animation-duration: 800ms;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both; }
+
+.animate-fast {
+  -webkit-animation-duration: 300ms;
+  animation-duration: 300ms;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both; }
 
