--- a/grunt-app/app/styles/partials/_animate.scss
+++ b/grunt-app/app/styles/partials/_animate.scss
@@ -4,3 +4,9 @@
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
 }
+.animate-fast{
+  -webkit-animation-duration: 300ms;
+  animation-duration: 300ms;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
