--- a/grunt-app/app/styles/css/partials/login.css
+++ b/grunt-app/app/styles/css/partials/login.css
@@ -35,17 +35,32 @@
 }
 
 /* line 33, ../../partials/login.scss */
+.img-recorded {
+  width: 100%;
+  height: 99%;
+  z-index: 1000;
+  left: -4px;
+  opacity: 0.1 !important;
+  position: absolute;
+}
+
+/* line 42, ../../partials/login.scss */
 .tap-text {
   text-align: center;
   margin-bottom: 10px !important;
   z-index: 111111;
-  display: block;
+  display: inline-block;
+  padding-top: 12px;
   position: absolute;
   bottom: 10%;
+  font-size: 25px;
+  letter-spacing: 1px;
+  height: 7%;
   width: 100%;
-  font-size: 16px;
   color: white;
   opacity: 1;
   text-transform: capitalize;
-  font-family: "Comic Sans MS";
+  font-family: des_passion;
+  box-shadow: 0px 1px 13px -1px #3a3a3a;
+  background: rgba(0, 0, 0, 0.4);
 }
