--- a/grunt-app/app/styles/partials/login.scss
+++ b/grunt-app/app/styles/partials/login.scss
@@ -4,6 +4,13 @@
   position: absolute;
 }
 
+.img-center-motion{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+}
+
 .img-owl{
   width: 100%;
   height: auto;
@@ -27,6 +34,23 @@
   height: 100%;
   z-index: 1000;
   left: -4px;
+  position: absolute;
+}
+
+.img-tree-hidden{
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  left: 100%;
+  position: absolute;
+}
+
+.img-success{
+  width: 100%;
+  height: auto;
+  margin: auto;
+  z-index: 100000;
+  top: 25%;
   position: absolute;
 }
 
