--- a/grunt-app/app/styles/partials/listen-hoot.scss
+++ b/grunt-app/app/styles/partials/listen-hoot.scss
@@ -1,5 +1,94 @@
 #listen-hoot {
 
+  .zoomedOutMoon{
+    -webkit-transform: scale(0.6);
+    -moz-transform:    scale(0.6);
+    -ms-transform:     scale(0.6);
+    -o-transform:      scale(0.6);
+    transform:         scale(0.6);
+  }
+  .zoomedOutOwl{
+    -webkit-transform: scale(0.3);
+    -moz-transform:    scale(0.3);
+    -ms-transform:     scale(0.3);
+    -o-transform:      scale(0.3);
+    transform:         scale(0.3);
+  }
+  .zoomedOutSky{
+    -webkit-transform: scale(1.1);
+    -moz-transform:    scale(1.1);
+    -ms-transform:     scale(1.1);
+    -o-transform:      scale(1.1);
+    transform:         scale(1.1);
+  }
+
+
+  .img-center{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+  }
+
+  .img-center-motion{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: -1;
+  }
+
+  .img-owl{
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 25%;
+    z-index: 1001;
+  }
+
+  .img-sun{
+    top: 20%;
+    left: auto;
+    width: 127%;
+    right: -13%;
+    height: auto;
+    z-index: 999;
+    position: absolute;
+  }
+
+  .img-tree{
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+    left: -4px;
+    position: absolute;
+  }
+
+  .img-tree-hidden{
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+    left: 100%;
+    position: absolute;
+  }
+
+  .img-success{
+    width: 100%;
+    height: auto;
+    margin: auto;
+    z-index: 100000;
+    top: 25%;
+    position: absolute;
+  }
+
+  .img-recorded{
+    width: 100%;
+    height: 99%;
+    z-index: 1000;
+    left: -4px;
+    opacity: 0.1 !important;
+    position: absolute;
+  }
+
+
 }
 
 .hoot {
@@ -9,9 +98,3 @@
   display: flex;
 }
 
-.img-center {
-  width: 100%;
-  height: 50%;
-  position: absolute;
-  top: 25%;
-}
