--- a/grunt-app/app/styles/css/main.css
+++ b/grunt-app/app/styles/css/main.css
@@ -65,6 +65,12 @@ p {
   letter-spacing: 1px;
   opacity: 0.9; }
 
+#login .img-zzz {
+  width: 100%;
+  height: 50%;
+  top: 23%;
+  position: absolute;
+  z-index: 8888; }
 #login .img-center {
   width: 100%;
   height: 100%;
