--- a/grunt-app/app/styles/partials/login.scss
+++ b/grunt-app/app/styles/partials/login.scss
@@ -1,4 +1,12 @@
 #login{
+  .img-zzz{
+    width: 100%;
+    height: 50%;
+    top: 23%;
+    position: absolute;
+    z-index: 8888;
+  }
+
   .img-center{
     width: 100%;
     height: 100%;
