--- a/grunt-app/app/styles/partials/_homepage.scss
+++ b/grunt-app/app/styles/partials/_homepage.scss
@@ -105,6 +105,16 @@
     z-index: 1001;
   }
 
+  .img-mic{
+    width: auto;
+    height: 7em;
+    position: absolute;
+    top: 78%;
+    opacity: 1;
+    right: 40%;
+    z-index: 1001;
+  }
+
   .img-sun{
     top: 20%;
     left: auto;
