--- a/grunt-app/app/styles/partials/listen-hoot.scss
+++ b/grunt-app/app/styles/partials/listen-hoot.scss
@@ -88,6 +88,15 @@
     position: absolute;
   }
 
+  .img-mic{
+    width: auto;
+    height: 7em;
+    position: absolute;
+    top: 78%;
+    opacity: 1;
+    right: 40%;
+    z-index: 1001;
+  }
 
 }
 
