--- a/grunt-app/app/styles/css/partials/listen-hoot.css
+++ b/grunt-app/app/styles/css/partials/listen-hoot.css
@@ -1,15 +1,97 @@
-/* line 5, ../../partials/listen-hoot.scss */
+/* line 3, ../../partials/listen-hoot.scss */
+#listen-hoot .zoomedOutMoon {
+  -webkit-transform: scale(0.6);
+  -moz-transform: scale(0.6);
+  -ms-transform: scale(0.6);
+  -o-transform: scale(0.6);
+  transform: scale(0.6);
+}
+/* line 10, ../../partials/listen-hoot.scss */
+#listen-hoot .zoomedOutOwl {
+  -webkit-transform: scale(0.3);
+  -moz-transform: scale(0.3);
+  -ms-transform: scale(0.3);
+  -o-transform: scale(0.3);
+  transform: scale(0.3);
+}
+/* line 17, ../../partials/listen-hoot.scss */
+#listen-hoot .zoomedOutSky {
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  transform: scale(1.1);
+}
+/* line 26, ../../partials/listen-hoot.scss */
+#listen-hoot .img-center {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+/* line 32, ../../partials/listen-hoot.scss */
+#listen-hoot .img-center-motion {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+}
+/* line 39, ../../partials/listen-hoot.scss */
+#listen-hoot .img-owl {
+  width: 100%;
+  height: auto;
+  position: absolute;
+  top: 25%;
+  z-index: 1001;
+}
+/* line 47, ../../partials/listen-hoot.scss */
+#listen-hoot .img-sun {
+  top: 20%;
+  left: auto;
+  width: 127%;
+  right: -13%;
+  height: auto;
+  z-index: 999;
+  position: absolute;
+}
+/* line 57, ../../partials/listen-hoot.scss */
+#listen-hoot .img-tree {
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  left: -4px;
+  position: absolute;
+}
+/* line 65, ../../partials/listen-hoot.scss */
+#listen-hoot .img-tree-hidden {
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  left: 100%;
+  position: absolute;
+}
+/* line 73, ../../partials/listen-hoot.scss */
+#listen-hoot .img-success {
+  width: 100%;
+  height: auto;
+  margin: auto;
+  z-index: 100000;
+  top: 25%;
+  position: absolute;
+}
+/* line 82, ../../partials/listen-hoot.scss */
+#listen-hoot .img-recorded {
+  width: 100%;
+  height: 99%;
+  z-index: 1000;
+  left: -4px;
+  opacity: 0.1 !important;
+  position: absolute;
+}
+
+/* line 94, ../../partials/listen-hoot.scss */
 .hoot {
   background-color: red;
   height: 85vh;
   width: 100%;
   display: flex;
-}
-
-/* line 12, ../../partials/listen-hoot.scss */
-.img-center {
-  width: 100%;
-  height: 50%;
-  position: absolute;
-  top: 25%;
 }
