--- a/grunt-app/app/styles/css/main.css
+++ b/grunt-app/app/styles/css/main.css
@@ -65,61 +65,63 @@ p {
   letter-spacing: 1px;
   opacity: 0.9; }
 
-#login .img-zzz {
-  width: 100%;
-  height: 50%;
-  top: 23%;
-  position: absolute;
-  z-index: 8888; }
-#login .img-center {
-  width: 100%;
-  height: 100%;
-  position: absolute; }
-#login .img-center-motion {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: -1; }
-#login .img-owl {
-  width: 100%;
-  height: auto;
-  position: absolute;
-  top: 25%;
-  z-index: 1001; }
-#login .img-sun {
-  top: 20%;
-  left: auto;
-  width: 127%;
-  right: -13%;
-  height: auto;
-  z-index: 999;
-  position: absolute; }
-#login .img-tree {
-  width: 100%;
-  height: 100%;
-  z-index: 1000;
-  left: -4px;
-  position: absolute; }
-#login .img-tree-hidden {
-  width: 100%;
-  height: 100%;
-  z-index: 1000;
-  left: 100%;
-  position: absolute; }
-#login .img-success {
-  width: 100%;
-  height: auto;
-  margin: auto;
-  z-index: 100000;
-  top: 25%;
-  position: absolute; }
-#login .img-recorded {
-  width: 100%;
-  height: 99%;
-  z-index: 1000;
-  left: -4px;
-  opacity: 0.1 !important;
-  position: absolute; }
+#login {
+  background-color: #0f141a !important; }
+  #login .img-zzz {
+    width: 100%;
+    height: 50%;
+    top: 23%;
+    position: absolute;
+    z-index: 8888; }
+  #login .img-center {
+    width: 100%;
+    height: 100%;
+    position: absolute; }
+  #login .img-center-motion {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: -1; }
+  #login .img-owl {
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 25%;
+    z-index: 1001; }
+  #login .img-sun {
+    top: 20%;
+    left: auto;
+    width: 127%;
+    right: -13%;
+    height: auto;
+    z-index: 999;
+    position: absolute; }
+  #login .img-tree {
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+    left: -4px;
+    position: absolute; }
+  #login .img-tree-hidden {
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+    left: 100%;
+    position: absolute; }
+  #login .img-success {
+    width: 100%;
+    height: auto;
+    margin: auto;
+    z-index: 100000;
+    top: 25%;
+    position: absolute; }
+  #login .img-recorded {
+    width: 100%;
+    height: 99%;
+    z-index: 1000;
+    left: -4px;
+    opacity: 0.1 !important;
+    position: absolute; }
 
 .tap-text {
   text-align: center;
@@ -333,6 +335,7 @@ p {
     -o-transform: scale(1);
     transform: scale(1); } }
 #homepage {
+  background-color: #0f141a !important;
   /*.circle-loader {
 
     animation-name: none;
@@ -411,12 +414,15 @@ p {
     top: 25%;
     z-index: 1001; }
   #homepage .img-mic {
-    width: auto;
+    width: 70px;
     height: 7em;
     position: absolute;
     top: 78%;
+    margin-left: auto;
+    margin-right: auto;
     opacity: 0.9;
-    right: 40%;
+    right: 0;
+    left: 0;
     z-index: 1001; }
   #homepage .img-sun {
     top: 20%;
@@ -452,6 +458,17 @@ p {
     left: -4px;
     opacity: 0.1 !important;
     position: absolute; }
+  #homepage .img-upload {
+    height: 7em;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70px;
+    position: absolute;
+    top: 67%;
+    opacity: 0.9;
+    z-index: 1001; }
 
 @-webkit-keyframes fadeinout {
   0%,100% {
@@ -474,81 +491,97 @@ p {
   width: 100%;
   height: 100%; }
 
-#listen-hoot .zoomedOutMoon {
-  -webkit-transform: scale(0.6);
-  -moz-transform: scale(0.6);
-  -ms-transform: scale(0.6);
-  -o-transform: scale(0.6);
-  transform: scale(0.6); }
-#listen-hoot .zoomedOutOwl {
-  -webkit-transform: scale(0.3);
-  -moz-transform: scale(0.3);
-  -ms-transform: scale(0.3);
-  -o-transform: scale(0.3);
-  transform: scale(0.3); }
-#listen-hoot .zoomedOutSky {
-  -webkit-transform: scale(1.1);
-  -moz-transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  -o-transform: scale(1.1);
-  transform: scale(1.1); }
-#listen-hoot .img-center {
-  width: 100%;
-  height: 100%;
-  position: absolute; }
-#listen-hoot .img-center-motion {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: -1; }
-#listen-hoot .img-owl {
-  width: 100%;
-  height: auto;
-  position: absolute;
-  top: 25%;
-  z-index: 1001; }
-#listen-hoot .img-sun {
-  top: 20%;
-  left: auto;
-  width: 127%;
-  right: -13%;
-  height: auto;
-  z-index: 999;
-  position: absolute; }
-#listen-hoot .img-tree {
-  width: 100%;
-  height: 100%;
-  z-index: 1000;
-  left: -4px;
-  position: absolute; }
-#listen-hoot .img-tree-hidden {
-  width: 100%;
-  height: 100%;
-  z-index: 1000;
-  left: 100%;
-  position: absolute; }
-#listen-hoot .img-success {
-  width: 100%;
-  height: auto;
-  margin: auto;
-  z-index: 100000;
-  top: 25%;
-  position: absolute; }
-#listen-hoot .img-recorded {
-  width: 100%;
-  height: 99%;
-  z-index: 1000;
-  left: -4px;
-  opacity: 0.1 !important;
-  position: absolute; }
-#listen-hoot .img-mic {
-  width: auto;
-  height: 7em;
-  position: absolute;
-  top: 78%;
-  opacity: 0.9;
-  right: 40%;
-  z-index: 1001; }
+#listen-hoot {
+  background-color: #0f141a !important; }
+  #listen-hoot .zoomedOutMoon {
+    -webkit-transform: scale(0.6);
+    -moz-transform: scale(0.6);
+    -ms-transform: scale(0.6);
+    -o-transform: scale(0.6);
+    transform: scale(0.6); }
+  #listen-hoot .zoomedOutOwl {
+    -webkit-transform: scale(0.3);
+    -moz-transform: scale(0.3);
+    -ms-transform: scale(0.3);
+    -o-transform: scale(0.3);
+    transform: scale(0.3); }
+  #listen-hoot .zoomedOutSky {
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    transform: scale(1.1); }
+  #listen-hoot .img-center {
+    width: 100%;
+    height: 100%;
+    position: absolute; }
+  #listen-hoot .img-center-motion {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: -1; }
+  #listen-hoot .img-owl {
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 25%;
+    z-index: 1001; }
+  #listen-hoot .img-sun {
+    top: 20%;
+    left: auto;
+    width: 127%;
+    right: -13%;
+    height: auto;
+    z-index: 999;
+    position: absolute; }
+  #listen-hoot .img-tree {
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+    left: -4px;
+    position: absolute; }
+  #listen-hoot .img-tree-hidden {
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+    left: 100%;
+    position: absolute; }
+  #listen-hoot .img-success {
+    width: 100%;
+    height: auto;
+    margin: auto;
+    z-index: 100000;
+    top: 25%;
+    position: absolute; }
+  #listen-hoot .img-recorded {
+    width: 100%;
+    height: 99%;
+    z-index: 1000;
+    left: -4px;
+    opacity: 0.1 !important;
+    position: absolute; }
+  #listen-hoot .img-mic {
+    width: 70px;
+    height: 7em;
+    position: absolute;
+    top: 78%;
+    margin-left: auto;
+    margin-right: auto;
+    opacity: 0.9;
+    right: 0;
+    left: 0;
+    z-index: 1001; }
+  #listen-hoot .img-upload {
+    height: 7em;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70px;
+    position: absolute;
+    top: 67%;
+    opacity: 0.9;
+    z-index: 1001; }
 
 .hoot {
   background-color: red;
