--- a/grunt-app/app/styles/partials/_homepage.scss
+++ b/grunt-app/app/styles/partials/_homepage.scss
@@ -1,4 +1,7 @@
 #homepage{
+
+  background-color: #0f141a !important;
+
   body {
     padding: 5em;
     text-align: center;
@@ -105,13 +108,17 @@
     z-index: 1001;
   }
 
+
   .img-mic{
-    width: auto;
+    width: 70px;
     height: 7em;
     position: absolute;
     top: 78%;
+    margin-left: auto;
+    margin-right: auto;
     opacity: 0.9;
-    right: 40%;
+    right: 0;
+    left: 0;
     z-index: 1001;
   }
 
@@ -159,7 +166,18 @@
     position: absolute;
   }
 
-
+  .img-upload{
+    height: 7em;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70px;
+    position: absolute;
+    top: 67%;
+    opacity: 0.9;
+    z-index: 1001;
+  }
 
 
 }
