--- a/grunt-app/app/styles/partials/listen-hoot.scss
+++ b/grunt-app/app/styles/partials/listen-hoot.scss
@@ -1,5 +1,7 @@
 #listen-hoot {
 
+  background-color: #0f141a !important;
+
   .zoomedOutMoon{
     -webkit-transform: scale(0.6);
     -moz-transform:    scale(0.6);
@@ -89,12 +91,28 @@
   }
 
   .img-mic{
-    width: auto;
+    width: 70px;
     height: 7em;
     position: absolute;
     top: 78%;
+    margin-left: auto;
+    margin-right: auto;
     opacity: 0.9;
-    right: 40%;
+    right: 0;
+    left: 0;
+    z-index: 1001;
+  }
+
+  .img-upload{
+    height: 7em;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70px;
+    position: absolute;
+    top: 67%;
+    opacity: 0.9;
     z-index: 1001;
   }
 
