--- a/grunt-app/app/styles/partials/_homepage.scss
+++ b/grunt-app/app/styles/partials/_homepage.scss
@@ -1,5 +1,46 @@
 #homepage{
 
+  .left-motion-trees{
+    -webkit-transform: translateX(-135em);
+    -moz-transform:    translateX(-135em);
+    -ms-transform:     translateX(-135em);
+    -o-transform:      translateX(-135em);
+    transform:         translateX(-135em);
+    -webkit-transition:  1.2s linear;
+    -moz-transition:  1.2s linear;
+    -o-transition:  1.2s linear;
+    transition:  1.2s linear;
+  }
+
+  .left-motion-trees1{
+    -webkit-transform: translateX(-135em);
+    -moz-transform:    translateX(-135em);
+    -ms-transform:     translateX(-135em);
+    -o-transform:      translateX(-135em);
+    transform:         translateX(-135em);
+    -webkit-transition:  2.1s linear;
+    -moz-transition:  2.1s linear;
+    -o-transition:  2.1s linear;
+    transition:  2.1s linear;
+  }
+
+  .left-motion-branch1{
+    -webkit-transform: translateX(-30em);
+    -moz-transform:    translateX(-30em);
+    -ms-transform:     translateX(-30em);
+    -o-transform:      translateX(-30em);
+    transform:         translateX(-30em);
+    -webkit-transition:  .7s ease-out;
+    -moz-transition:  .7s ease-out;
+    -o-transition:  .7s ease-out;
+    transition:  .7s ease-out;
+    -webkit-transition-delay:  1.1s;
+    -moz-transition-delay:  1.1s;
+    -o-transition-delay:  1.1s;
+    transition-delay:  1.1s;
+
+  }
+
   background-color: #0f141a !important;
 
   body {
@@ -179,6 +220,37 @@
     z-index: 1001;
   }
 
+  .img-trees{
+    height: 100%;
+    left: 35em;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: auto;
+    position: absolute;
+    z-index: 1078;
+  }
+  .img-trees1{
+    height: 100%;
+    left: 30em;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: auto;
+    position: absolute;
+    z-index: 1078;
+  }
+
+  .img-branch1{
+    height: 100%;
+    left: 30em;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    position: absolute;
+    z-index: 1078;
+  }
 
 }
 @-webkit-keyframes fadeinout {
